make colab demo default to GPU

--- a/prototyping/12_colab_demo.ipynb
+++ b/prototyping/12_colab_demo.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "55ca49a3-b26d-40d2-93be-3ec528820ad4",
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "id": "55ca49a3-b26d-40d2-93be-3ec528820ad4",
+    "outputId": "33939694-8539-47b9-b856-7e5ab18bc7c8"
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -14,8 +21,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a428ad8-abd1-485b-85bf-54cd2296ec01",
+   "id": "c11dd6da-fb3b-4fb5-8889-3cd8099ce4cf",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install rai==0.2.0-dev2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a428ad8-abd1-485b-85bf-54cd2296ec01",
+   "metadata": {
+    "id": "2a428ad8-abd1-485b-85bf-54cd2296ec01"
+   },
    "outputs": [],
    "source": [
     "import tqdm\n",
@@ -28,17 +47,29 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "514c2110-11eb-433a-a2a2-e4ff0dd10f60",
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 1000
+    },
+    "id": "514c2110-11eb-433a-a2a2-e4ff0dd10f60",
+    "outputId": "e87be45e-7156-45ff-e005-a13f423bf74d"
+   },
    "outputs": [],
-   "source": [
-    "!pip install rai==0.2.0-dev2"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c3814c86-8748-471b-bb41-3a31bbd9b869",
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "id": "c3814c86-8748-471b-bb41-3a31bbd9b869",
+    "outputId": "3b88e408-457a-4943-ef86-cec1458d41b9"
+   },
    "outputs": [],
    "source": [
     "import pydicom\n",
@@ -49,7 +80,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7a9dd35b-cd6e-4fed-b8ed-e9adf3667013",
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "id": "7a9dd35b-cd6e-4fed-b8ed-e9adf3667013",
+    "outputId": "967666c4-2c40-4ef4-d6f9-33d78f63b7b7"
+   },
    "outputs": [],
    "source": [
     "import rai\n",
@@ -60,7 +98,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "58e3bd81-508b-4273-ad19-9cb1cd3905a3",
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "id": "58e3bd81-508b-4273-ad19-9cb1cd3905a3",
+    "outputId": "310add06-c3d6-45a7-a3f9-81c04a920d38"
+   },
    "outputs": [],
    "source": [
     "import raicontours\n",
@@ -74,7 +119,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5fb0dae0-9622-4a3d-b004-a437219966a6",
-   "metadata": {},
+   "metadata": {
+    "id": "5fb0dae0-9622-4a3d-b004-a437219966a6"
+   },
    "outputs": [],
    "source": [
     "%matplotlib widget"
@@ -84,7 +131,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4f6aa26e-e721-416d-96b6-27744c9cc981",
-   "metadata": {},
+   "metadata": {
+    "id": "4f6aa26e-e721-416d-96b6-27744c9cc981"
+   },
    "outputs": [],
    "source": [
     "cfg = raicontours.get_config()"
@@ -94,7 +143,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "094f0c62-a67e-4d75-9eab-683966f069a4",
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "094f0c62-a67e-4d75-9eab-683966f069a4",
+    "outputId": "5faecb60-96ec-4f78-f2c3-f95ac620c833"
+   },
    "outputs": [],
    "source": [
     "cfg"
@@ -104,7 +159,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e53da7c8-a538-4a74-ab2e-861ede4bb1d8",
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "e53da7c8-a538-4a74-ab2e-861ede4bb1d8",
+    "outputId": "3667bf25-509d-4614-d68e-7fa5d012a14e"
+   },
    "outputs": [],
    "source": [
     "image_paths, structure_path = rai.download_deepmind_example()\n",
@@ -115,7 +176,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "60f4de14-450c-4741-bcb9-097772d0a14f",
-   "metadata": {},
+   "metadata": {
+    "id": "60f4de14-450c-4741-bcb9-097772d0a14f"
+   },
    "outputs": [],
    "source": [
     "grids, image_stack, image_uids = rai.paths_to_image_stack_hfs(cfg=cfg, paths=image_paths)\n",
@@ -126,7 +189,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c2d52c0e-d533-40ba-becf-a83a802d7205",
-   "metadata": {},
+   "metadata": {
+    "id": "c2d52c0e-d533-40ba-becf-a83a802d7205"
+   },
    "outputs": [],
    "source": [
     "models = rai.load_models(cfg=cfg)"
@@ -136,7 +201,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b37604fa-72a7-4414-8ff8-112d7ea0e19a",
-   "metadata": {},
+   "metadata": {
+    "id": "b37604fa-72a7-4414-8ff8-112d7ea0e19a"
+   },
    "outputs": [],
    "source": []
   },
@@ -144,7 +211,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9368efc8-f8b4-4cbb-bb8b-a14431722c92",
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "9368efc8-f8b4-4cbb-bb8b-a14431722c92",
+    "outputId": "5e1614f5-e4c0-48fd-d76a-f602e431818d"
+   },
    "outputs": [],
    "source": [
     "predicted_masks = rai.inference(\n",
@@ -160,7 +233,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b0ce67e8-07fa-401d-a858-fa4cd191441d",
-   "metadata": {},
+   "metadata": {
+    "id": "b0ce67e8-07fa-401d-a858-fa4cd191441d"
+   },
    "outputs": [],
    "source": []
   },
@@ -168,7 +243,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dc2039f4-2ff2-4b89-9b97-75680d56bec0",
-   "metadata": {},
+   "metadata": {
+    "id": "dc2039f4-2ff2-4b89-9b97-75680d56bec0"
+   },
    "outputs": [],
    "source": []
   },
@@ -176,7 +253,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0716adaf-53dd-4e81-b5b0-ed6210cd87c5",
-   "metadata": {},
+   "metadata": {
+    "id": "0716adaf-53dd-4e81-b5b0-ed6210cd87c5"
+   },
    "outputs": [],
    "source": [
     "structure_ds = pydicom.read_file(structure_path)\n",
@@ -187,7 +266,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "73107915-f68c-494e-808b-9a57674ee07a",
-   "metadata": {},
+   "metadata": {
+    "id": "73107915-f68c-494e-808b-9a57674ee07a"
+   },
    "outputs": [],
    "source": [
     "align_map = {\n",
@@ -224,7 +305,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a411139f-fd6d-4884-b516-4b4c8f9f46c7",
-   "metadata": {},
+   "metadata": {
+    "id": "a411139f-fd6d-4884-b516-4b4c8f9f46c7"
+   },
    "outputs": [],
    "source": [
     "predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
@@ -249,7 +332,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f2825fb9-ab73-4e3e-b7fe-a0e0ddaeb25f",
-   "metadata": {},
+   "metadata": {
+    "id": "f2825fb9-ab73-4e3e-b7fe-a0e0ddaeb25f"
+   },
    "outputs": [],
    "source": [
     "slice_indices, axis_limits, centre_indices = rai.view_ranges_from_masks(grids, predicted_masks)"
@@ -259,7 +344,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "784a047e-9d49-47a9-b260-d7712c43a6cb",
-   "metadata": {},
+   "metadata": {
+    "id": "784a047e-9d49-47a9-b260-d7712c43a6cb"
+   },
    "outputs": [],
    "source": [
     "contours_by_orientation = rai.masks_to_contours_by_orientation(\n",
@@ -271,7 +358,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "27ed52d6-4d3b-494e-b8bc-c55277a81c16",
-   "metadata": {},
+   "metadata": {
+    "id": "27ed52d6-4d3b-494e-b8bc-c55277a81c16"
+   },
    "outputs": [],
    "source": [
     "vmin = 0.2\n",
@@ -282,7 +371,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f81a40d1-0618-41dd-af83-17deee1b05c9",
-   "metadata": {},
+   "metadata": {
+    "id": "f81a40d1-0618-41dd-af83-17deee1b05c9"
+   },
    "outputs": [],
    "source": [
     "rai.draw_contours_by_orientation(\n",
@@ -301,7 +392,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1a4e952c-92bb-4c1d-b907-a1708889fef0",
-   "metadata": {},
+   "metadata": {
+    "id": "1a4e952c-92bb-4c1d-b907-a1708889fef0"
+   },
    "outputs": [],
    "source": [
     "plt.close('all')\n",
@@ -320,10 +413,14 @@
   }
  ],
  "metadata": {
+  "accelerator": "GPU",
+  "colab": {
+   "provenance": []
+  },
   "kernelspec": {
-   "display_name": "rai",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "rai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -335,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
