remove interactive plot for now

--- a/prototyping/12-colab-demo.ipynb
+++ b/prototyping/12-colab-demo.ipynb
@@ -46,21 +46,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "514c2110-11eb-433a-a2a2-e4ff0dd10f60",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 1000
-    },
-    "id": "514c2110-11eb-433a-a2a2-e4ff0dd10f60",
-    "outputId": "e87be45e-7156-45ff-e005-a13f423bf74d"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "c3814c86-8748-471b-bb41-3a31bbd9b869",
    "metadata": {
     "colab": {
@@ -200,16 +185,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b37604fa-72a7-4414-8ff8-112d7ea0e19a",
-   "metadata": {
-    "id": "b37604fa-72a7-4414-8ff8-112d7ea0e19a"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "9368efc8-f8b4-4cbb-bb8b-a14431722c92",
    "metadata": {
     "colab": {
@@ -228,26 +203,6 @@
     "    step_size=60,\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0ce67e8-07fa-401d-a858-fa4cd191441d",
-   "metadata": {
-    "id": "b0ce67e8-07fa-401d-a858-fa4cd191441d"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc2039f4-2ff2-4b89-9b97-75680d56bec0",
-   "metadata": {
-    "id": "dc2039f4-2ff2-4b89-9b97-75680d56bec0"
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -272,17 +227,11 @@
    "outputs": [],
    "source": [
     "align_map = {\n",
-    "    \"Brain\": [TG263.Brain],\n",
     "    \"Brainstem\": [TG263.Brainstem],\n",
-    "    \"Cochlea-Lt\": [TG263.Cochlea_L],\n",
-    "    \"Cochlea-Rt\": [TG263.Cochlea_R],\n",
     "    \"Lacrimal-Lt\": [TG263.Glnd_Lacrimal_L],\n",
     "    \"Lacrimal-Rt\": [TG263.Glnd_Lacrimal_R],\n",
     "    \"Lens-Lt\": [TG263.Lens_L],\n",
     "    \"Lens-Rt\": [TG263.Lens_R],\n",
-    "    \"Lung-Lt\": [TG263.Lung_L],\n",
-    "    \"Lung-Rt\": [TG263.Lung_R],\n",
-    "    \"Mandible\": [TG263.Bone_Mandible],\n",
     "    \"Optic-Nerve-Lt\": [TG263.OpticNrv_L],\n",
     "    \"Optic-Nerve-Rt\": [TG263.OpticNrv_R],\n",
     "    \"Orbit-Lt\": [TG263.Eye_L],\n",
@@ -376,16 +325,16 @@
    },
    "outputs": [],
    "source": [
-    "rai.draw_contours_by_orientation(\n",
-    "    cfg=cfg,\n",
-    "    grids=grids,\n",
-    "    images=image_stack,\n",
-    "    contours_by_orientation=contours_by_orientation,\n",
-    "    vmin=vmin,\n",
-    "    vmax=vmax,\n",
-    "    axis_limits=axis_limits,\n",
-    "    centre_indices=centre_indices,\n",
-    ")"
+    "# rai.draw_contours_by_orientation(\n",
+    "#     cfg=cfg,\n",
+    "#     grids=grids,\n",
+    "#     images=image_stack,\n",
+    "#     contours_by_orientation=contours_by_orientation,\n",
+    "#     vmin=vmin,\n",
+    "#     vmax=vmax,\n",
+    "#     axis_limits=axis_limits,\n",
+    "#     centre_indices=centre_indices,\n",
+    "# )"
    ]
   },
   {
@@ -397,7 +346,7 @@
    },
    "outputs": [],
    "source": [
-    "plt.close('all')\n",
+    "# plt.close('all')\n",
     "\n",
     "rai.auto_scroll_contours_by_orientation(\n",
     "    grids=grids,\n",
