update demo with matplotlib restart

--- a/prototyping/12-colab-demo.ipynb
+++ b/prototyping/12-colab-demo.ipynb
@@ -31,6 +31,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9f85aba0-32b2-45a7-9265-3cd41c70646a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pkg_resources import parse_version\n",
+    "import matplotlib\n",
+    "assert parse_version(matplotlib.__version__) > parse_version('3.2.2')\n",
+    "# If this fails, click the \"restart runtime\" button in the cell above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2a428ad8-abd1-485b-85bf-54cd2296ec01",
    "metadata": {
     "id": "2a428ad8-abd1-485b-85bf-54cd2296ec01"
@@ -319,35 +332,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f81a40d1-0618-41dd-af83-17deee1b05c9",
-   "metadata": {
-    "id": "f81a40d1-0618-41dd-af83-17deee1b05c9"
-   },
-   "outputs": [],
-   "source": [
-    "# rai.draw_contours_by_orientation(\n",
-    "#     cfg=cfg,\n",
-    "#     grids=grids,\n",
-    "#     images=image_stack,\n",
-    "#     contours_by_orientation=contours_by_orientation,\n",
-    "#     vmin=vmin,\n",
-    "#     vmax=vmax,\n",
-    "#     axis_limits=axis_limits,\n",
-    "#     centre_indices=centre_indices,\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "1a4e952c-92bb-4c1d-b907-a1708889fef0",
    "metadata": {
     "id": "1a4e952c-92bb-4c1d-b907-a1708889fef0"
    },
    "outputs": [],
    "source": [
-    "# plt.close('all')\n",
-    "\n",
     "rai.auto_scroll_contours_by_orientation(\n",
     "    grids=grids,\n",
     "    images=image_stack,\n",
