allow custom interval

--- a/prototyping/12-colab-demo.ipynb
+++ b/prototyping/12-colab-demo.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install rai==0.2.0-dev2"
+    "!pip install rai==0.2.0-dev3"
    ]
   },
   {
@@ -37,8 +37,19 @@
    "source": [
     "from pkg_resources import parse_version\n",
     "import matplotlib\n",
-    "assert parse_version(matplotlib.__version__) > parse_version('3.2.2')\n",
+    "assert parse_version(matplotlib.__version__) > parse_version('3.4.0')\n",
     "# If this fails, click the \"restart runtime\" button in the cell above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94632d32-5215-45b8-bd70-4625e4162752",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import output\n",
+    "output.enable_custom_widget_manager()"
    ]
   },
   {
@@ -347,6 +358,7 @@
     "    structure_names=cfg[\"structures\"],\n",
     "    vmin=vmin,\n",
     "    vmax=vmax,\n",
+    "    interval=200,\n",
     ")"
    ]
   }
