--- a/prototyping/12-colab-demo.ipynb
+++ b/prototyping/12-colab-demo.ipynb
@@ -25,31 +25,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install rai==0.2.0-dev3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f85aba0-32b2-45a7-9265-3cd41c70646a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pkg_resources import parse_version\n",
-    "import matplotlib\n",
-    "assert parse_version(matplotlib.__version__) > parse_version('3.4.0')\n",
-    "# If this fails, click the \"restart runtime\" button in the cell above"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94632d32-5215-45b8-bd70-4625e4162752",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from google.colab import output\n",
-    "output.enable_custom_widget_manager()"
+    "try:\n",
+    "    from google.colab import output\n",
+    "    !pip install rai==0.2.0-dev4\n",
+    "    \n",
+    "except ModuleNotFoundError:\n",
+    "    %load_ext autoreload\n",
+    "    %autoreload 2"
    ]
   },
   {
@@ -122,18 +104,6 @@
     "from raicontours import TG263\n",
     "\n",
     "raicontours.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5fb0dae0-9622-4a3d-b004-a437219966a6",
-   "metadata": {
-    "id": "5fb0dae0-9622-4a3d-b004-a437219966a6"
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib widget"
    ]
   },
   {
@@ -277,18 +247,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "df8c92ad-dcd9-4ba7-b32a-d6911965918a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted_contours_by_structure = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a411139f-fd6d-4884-b516-4b4c8f9f46c7",
    "metadata": {
     "id": "a411139f-fd6d-4884-b516-4b4c8f9f46c7"
    },
    "outputs": [],
    "source": [
-    "predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
-    "    x_grid=x_grid, y_grid=y_grid, masks=predicted_masks, structure_names=cfg[\"structures\"]\n",
+    "predicted_contours_by_structure[\"transverse\"] = rai.masks_to_contours_by_structure(\n",
+    "    grids=grids, \n",
+    "    masks=predicted_masks, \n",
+    "    structure_names=cfg[\"structures\"], \n",
+    "    orientation=\"transverse\",\n",
     ")\n",
     "\n",
     "aligned_predicted_contours_by_structure = rai.merge_contours_by_structure(\n",
-    "    predicted_contours_by_structure, align_map\n",
+    "    predicted_contours_by_structure[\"transverse\"], align_map\n",
     ")\n",
     "\n",
     "dice = {}\n",
@@ -310,56 +293,57 @@
    },
    "outputs": [],
    "source": [
+    "vmin = 0.2\n",
+    "vmax = 0.4\n",
+    "\n",
     "slice_indices, axis_limits, centre_indices = rai.view_ranges_from_masks(grids, predicted_masks)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "784a047e-9d49-47a9-b260-d7712c43a6cb",
-   "metadata": {
-    "id": "784a047e-9d49-47a9-b260-d7712c43a6cb"
-   },
+   "id": "49ed73ff-3056-4525-8fa5-68b3eedcd207",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "contours_by_orientation = rai.masks_to_contours_by_orientation(\n",
-    "    grids, predicted_masks, structure_names=cfg[\"structures\"]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27ed52d6-4d3b-494e-b8bc-c55277a81c16",
-   "metadata": {
-    "id": "27ed52d6-4d3b-494e-b8bc-c55277a81c16"
-   },
-   "outputs": [],
-   "source": [
-    "vmin = 0.2\n",
-    "vmax = 0.4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a4e952c-92bb-4c1d-b907-a1708889fef0",
-   "metadata": {
-    "id": "1a4e952c-92bb-4c1d-b907-a1708889fef0"
-   },
-   "outputs": [],
-   "source": [
-    "rai.auto_scroll_contours_by_orientation(\n",
+    "rai.plot_contours_by_structure(\n",
     "    grids=grids,\n",
     "    images=image_stack,\n",
-    "    contours_by_orientation=contours_by_orientation,\n",
-    "    slice_indicies=slice_indices,\n",
+    "    contours_by_structure=predicted_contours_by_structure[\"transverse\"],\n",
+    "    orientation=\"transverse\",\n",
+    "    slice_indices=slice_indices,\n",
     "    axis_limits=axis_limits,\n",
     "    structure_names=cfg[\"structures\"],\n",
     "    vmin=vmin,\n",
     "    vmax=vmax,\n",
-    "    interval=200,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28b9f677-414d-4fb0-b279-ecff2c881487",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for orientation in [\"coronal\", \"sagittal\"]:\n",
+    "    predicted_contours_by_structure[orientation] = rai.masks_to_contours_by_structure(\n",
+    "        grids=grids, \n",
+    "        masks=predicted_masks, \n",
+    "        structure_names=cfg[\"structures\"], \n",
+    "        orientation=orientation,\n",
+    "    )\n",
+    "    rai.plot_contours_by_structure(\n",
+    "        grids=grids,\n",
+    "        images=image_stack,\n",
+    "        contours_by_structure=predicted_contours_by_structure[orientation],\n",
+    "        orientation=orientation,\n",
+    "        slice_indices=slice_indices,\n",
+    "        axis_limits=axis_limits,\n",
+    "        structure_names=cfg[\"structures\"],\n",
+    "        vmin=vmin,\n",
+    "        vmax=vmax,\n",
+    "    )"
    ]
   }
  ],
@@ -369,9 +353,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "rai",
    "language": "python",
-   "name": "python3"
+   "name": "rai"
   },
   "language_info": {
    "codemirror_mode": {
@@ -383,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
