--- a/prototyping/12-colab-demo.ipynb
+++ b/prototyping/12-colab-demo.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "try:\n",
     "    from google.colab import output\n",
-    "    !pip install rai==0.2.0-dev4\n",
+    "    !pip install rai==0.2.0-dev5\n",
     "    \n",
     "except ModuleNotFoundError:\n",
     "    %load_ext autoreload\n",
@@ -240,8 +240,7 @@
     "\n",
     "dicom_contours_by_structure = rai.dicom_to_contours_by_structure(\n",
     "    ds=structure_ds, image_uids=image_uids, structure_names=structure_names\n",
-    ")\n",
-    "\n"
+    ")"
    ]
   },
   {
@@ -295,6 +294,7 @@
    "source": [
     "vmin = 0.2\n",
     "vmax = 0.4\n",
+    "figsize = (12, 12)\n",
     "\n",
     "slice_indices, axis_limits, centre_indices = rai.view_ranges_from_masks(grids, predicted_masks)"
    ]
@@ -314,6 +314,7 @@
     "    slice_indices=slice_indices,\n",
     "    axis_limits=axis_limits,\n",
     "    structure_names=cfg[\"structures\"],\n",
+    "    figsize=figsize,\n",
     "    vmin=vmin,\n",
     "    vmax=vmax,\n",
     ")"
@@ -341,6 +342,7 @@
     "        slice_indices=slice_indices,\n",
     "        axis_limits=axis_limits,\n",
     "        structure_names=cfg[\"structures\"],\n",
+    "        figsize=figsize,\n",
     "        vmin=vmin,\n",
     "        vmax=vmax,\n",
     "    )"
@@ -353,9 +355,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "rai",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "rai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -367,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
